// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addSomeFixesIfNeeded adds default export if 'export default' is missing and 'const App' is present 1`] = `"const App = () => {};"`;

exports[`addSomeFixesIfNeeded adds import statement for '@emotion/react' if 'css={css\`' is present and '@emotion/react' is missing 1`] = `
"css={css\`
    color: red;
  \`}"
`;

exports[`addSomeFixesIfNeeded adds import statement for 'FC' if ' FC<{' is present and 'import type { FC }' is missing 1`] = `"FC<{ prop: string }>"`;

exports[`addSomeFixesIfNeeded adds import statement for 'useState' if 'useState(' is present and 'import { useState }' is missing 1`] = `"useState(0)"`;

exports[`addSomeFixesIfNeeded handles multiple occurrences of 'css={css\`' correctly 1`] = `
"css={css\`
    color: red;
  \`} css={css\`
    font-size: 16px;
  \`}"
`;
